--- a/project.config
+++ b/project.config
@@ -2,20 +2,19 @@
 	inheritFrom = All-Projects
 [submit]
 [access "refs/*"]
-	owner = group user/xtexChooser (xtexChooser)
+	owner = group chitangUI
 [access "refs/for/refs/*"]
-	label-Code-Review = -2..+2 group user/xtexChooser (xtexChooser)
-	label-Verified = -1..+1 group user/xtexChooser (xtexChooser)
-	push = group user/xtexChooser (xtexChooser)
-	read = group user/xtexChooser (xtexChooser)
-	rebase = group user/xtexChooser (xtexChooser)
-	removeReviewer = group user/xtexChooser (xtexChooser)
-	submit = group user/xtexChooser (xtexChooser)
+	label-Code-Review = -2..+2 group chitangUI
+	label-Verified = -1..+1 group chitangUI
+	push = group chitangUI
+	read = group chitangUI
+	rebase = group chitangUI
+	removeReviewer = group chitangUI
+	submit = group chitangUI
 [access "refs/heads/*"]
-	create = group user/xtexChooser (xtexChooser)
-	push = +force group user/xtexChooser (xtexChooser)
-	pushMerge = group user/xtexChooser (xtexChooser)
-	read = group user/xtexChooser (xtexChooser)
+	create = group chitangUI
+	push = group chitangUI
+	pushMerge = group chitangUI
+	read = group chitangUI
 [access "refs/tags/*"]
-	push = group user/xtexChooser (xtexChooser)
-	push = +force group user/xtexChooser (xtexChooser)
+	push = group chitangUI
